--- a/WpfApp2/GUI/LoginPage.xaml
+++ b/WpfApp2/GUI/LoginPage.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp2.GUI.LoginPage"
+﻿<Window x:Class="MuSearch.GUI.LoginPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2.GUI"
+        xmlns:local="clr-namespace:MuSearch.GUI"
         mc:Ignorable="d"
         Title="LoginPage" Height="300" Width="300" FontSize="14" Background="#04c582">
     <Border Background="#2e3137" CornerRadius="20" Margin="20">
