--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window x:Class="MuSearch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2"
+        xmlns:local="clr-namespace:MuSearch"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="grid"
+        <DataGrid x:Name="grid" FontSize="18" FontFamily="Comic Sans MS"
                   ItemsSource="{Binding DataView}"
                   AutoGenerateColumns="True" />
-        <Button Content="Button" HorizontalAlignment="Left" Margin="342,331,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-
+        <Button Content="Press Me!" HorizontalAlignment="Left" Margin="342,331,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
     </Grid>
 </Window>
