--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -6,10 +6,19 @@
         xmlns:local="clr-namespace:MuSearch"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <DataGrid x:Name="grid" FontSize="18" FontFamily="Comic Sans MS"
-                  ItemsSource="{Binding DataView}"
-                  AutoGenerateColumns="True" />
-        <Button Content="Press Me!" HorizontalAlignment="Left" Margin="342,331,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-    </Grid>
+    <StackPanel>
+        <StackPanel.Background>
+            <ImageBrush ImageSource="/GUI/DesignFiles/music_notes_wallpaper_by_amh05.jpg" Stretch="UniformToFill"/>
+        </StackPanel.Background>
+        <TextBox x:Name="title" Text="MuSearch" FontSize="40" FontFamily="comic sans ms" HorizontalAlignment="Center"
+                 FontWeight="ExtraBold" Background="Transparent" Foreground="LightPink" Margin="10,10,10,10"/>
+        <Grid>
+            <DataGrid x:Name="grid" FontSize="18" FontFamily="Comic Sans MS"
+                      ItemsSource="{Binding DataView}" AutoGenerateColumns="True" Margin="200,30,100,15" Width="400" Height="270"
+                      HorizontalAlignment="Left"/>
+            <Button x:Name="myGamesBtn" Content="MY GAMES" HorizontalAlignment="Right" Height="30" Width="75" Margin="0,10,10,10" FontFamily="Estrangelo Edessa" FontWeight="Bold"/>
+            <Button x:Name="allGamesBtn" Content="ALL GAMES" HorizontalAlignment="Right" Height="30" Width="75" Margin="0,10,10,100" FontFamily="Estrangelo Edessa" FontWeight="Bold"/>
+        </Grid>
+        <Button x:Name="showLettersBtn" Content="Show tifzoret" HorizontalAlignment="Center" Width="95" Click="Button_Click"/>
+    </StackPanel>
 </Window>
