--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -7,10 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="grid"
-                  ItemsSource="{Binding DataView}"
-                  AutoGenerateColumns="True" />
+
         <Button Content="Button" HorizontalAlignment="Left" Margin="342,331,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <DataGrid Name ="dataGrid" HorizontalAlignment="Left" Height="288" Margin="55,38,0,0" VerticalAlignment="Top" Width="669" HeadersVisibility="None" ColumnWidth="*"/>
 
     </Grid>
 </Window>
