--- a/WpfApp2/GUI/AllGames.xaml
+++ b/WpfApp2/GUI/AllGames.xaml
@@ -7,8 +7,12 @@
         mc:Ignorable="d"
         Title="AllGames" Height="450" Width="800">
     <StackPanel Background="Black">
-        <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING" Margin="260,10,240,10" FontWeight="ExtraBold">ALL GAMES</TextBlock>
-        <Button Margin="330,30,318,10" FontSize="13" FontWeight="Bold" FontFamily="AR CHRISTY" Foreground="Maroon" Background="Black" Height="36" Content="BACK TO SETTINGS" RenderTransformOrigin="0.5,0.5">
+        <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING"
+                   Margin="0,10,0,10" FontWeight="ExtraBold" HorizontalAlignment="Center">ALL GAMES</TextBlock>
+        <DataGrid>
+        </DataGrid>
+        <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
+                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
