--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
         <Button Content="Button" HorizontalAlignment="Left" Margin="342,331,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <DataGrid Name ="dataGrid" HorizontalAlignment="Left" Height="288" Margin="55,38,0,0" VerticalAlignment="Top" Width="669" HeadersVisibility="None" ColumnWidth="*"/>
-
+        <Button Content="MY GAMES" HorizontalAlignment="Left" Margin="532,378,0,0" VerticalAlignment="Top" Width="75" Click="OnMyGames"/>
+        <Button Content="ALL GAMES" HorizontalAlignment="Left" Margin="176,374,0,0" VerticalAlignment="Top" Width="75" Click="OnAllGames"/>
     </Grid>
 </Window>
