--- a/WpfApp2/GUI/AllGames.xaml
+++ b/WpfApp2/GUI/AllGames.xaml
@@ -9,10 +9,8 @@
     <StackPanel Background="Black">
         <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING"
                    Margin="0,10,0,10" FontWeight="ExtraBold" HorizontalAlignment="Center">ALL GAMES</TextBlock>
-        <DataGrid>
-        </DataGrid>
         <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
-                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5">
+                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
