--- a/WpfApp2/GUI/MyGames.xaml
+++ b/WpfApp2/GUI/MyGames.xaml
@@ -11,20 +11,9 @@
     <StackPanel Background="Black">
         <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING"
                    Margin="0,10,0,10" FontWeight="ExtraBold" HorizontalAlignment="Center">MY GAMES</TextBlock>
-        <DataGrid>
-        </DataGrid>
-        <ListView ItemsSource="{Binding games}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding Date}"/>
-                        <TextBlock Text="{Binding Score}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <DataGrid Name ="dataGrid" HorizontalAlignment="Left" Height="206" Margin="55,38,0,0" VerticalAlignment="Top" Width="669" ColumnWidth="*"/>
         <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
-                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5">
+                Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
