--- a/WpfApp2/GUI/MyGames.xaml
+++ b/WpfApp2/GUI/MyGames.xaml
@@ -11,7 +11,8 @@
     <StackPanel Background="Black">
         <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING"
                    Margin="0,10,0,10" FontWeight="ExtraBold" HorizontalAlignment="Center">MY GAMES</TextBlock>
-        <DataGrid Name ="dataGrid" HorizontalAlignment="Left" Height="206" Margin="55,38,0,0" VerticalAlignment="Top" Width="669" ColumnWidth="*"/>
+        <DataGrid Name ="dataGrid" HorizontalAlignment="Center" Margin="0,30,0,10"
+                  VerticalAlignment="Top" Width="669" ColumnWidth="*" Background="Black"/>
         <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
                 Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
             <Button.RenderTransform>
