--- a/WpfApp2/GUI/UserInputWindow.xaml
+++ b/WpfApp2/GUI/UserInputWindow.xaml
@@ -6,11 +6,15 @@
         xmlns:local="clr-namespace:WpfApp2.GUI"
         mc:Ignorable="d"
         Title="UserInputWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel Margin="20">
-            <Label Content="UserInput" Foreground="White"/>
-            <TextBox Name="txtUserInput" Background="#545d6a" Foreground="White" FontSize="18"/>
-            <Button Name="btnSubmit" Click ="btnSubmitClick" Content="Submit" Margin="60 10" Background="#545d6a" Foreground="White" FontSize="18"></Button>
+    <Grid Background="Maroon">
+        <StackPanel>
+            <TextBlock HorizontalAlignment="Center" Margin="0,10,0,10" FontSize="40" FontFamily="Century Gothic">CATEGORIES</TextBlock>
+            <TextBlock FontSize="15" Margin="50,10,0,5" FontFamily="Century Gothic">enter keyword :</TextBlock>
+            <TextBox Name="txtUserInput"  Margin="50,0,450,10" Background="#545d6a" Foreground="White" FontSize="18"/>
+            <Button Name="btnSubmit" FontFamily="Century Gothic" Click ="btnSubmitClick" Content="Submit" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
+            <TextBlock FontSize="15" Margin="50,0,0,5" FontFamily="Century Gothic">choose categories :</TextBlock>
+            <CheckBox  Margin="50,0,0,10" Width="140" HorizontalAlignment="Left" FontFamily="Century Gothic">Michael Jackson</CheckBox>
+            <Button Name="btnSubmit2" FontFamily="Century Gothic" Click ="btnSubmitClick2" Content="Submit" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
         </StackPanel>
     </Grid>
 </Window>
