--- a/WpfApp2/GUI/UserInputWindow.xaml
+++ b/WpfApp2/GUI/UserInputWindow.xaml
@@ -13,8 +13,16 @@
             <TextBox Name="txtUserInput"  Margin="50,0,450,10" Background="#545d6a" Foreground="White" FontSize="18"/>
             <Button Name="btnSubmit" FontFamily="Century Gothic" Click ="btnSubmitClick" Content="Submit" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
             <TextBlock FontSize="15" Margin="50,0,0,5" FontFamily="Century Gothic">choose categories :</TextBlock>
-            <CheckBox  Margin="50,0,0,10" Width="140" HorizontalAlignment="Left" FontFamily="Century Gothic">Michael Jackson</CheckBox>
             <Button Name="btnSubmit2" FontFamily="Century Gothic" Click ="btnSubmitClick2" Content="Submit" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
+            <ListBox Name="listBoxZone" ItemsSource="{Binding TheList}"
+                     Height="115" Background="Azure">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox Name="CheckBoxZone" Content="{Binding TheText}" Tag="{Binding TheValue}" Checked="CheckBoxZone_Checked" Unchecked="CheckBoxZone_Unchecked" Margin="0,5,0,0"></CheckBox>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </StackPanel>
+        <TextBox Name="ZoneText" Width="160" Height="20" Margin="-80,340,0,0" Background="Bisque" />
     </Grid>
 </Window>
