--- a/WpfApp2/GUI/SignInPage.xaml
+++ b/WpfApp2/GUI/SignInPage.xaml
@@ -1,20 +1,21 @@
-﻿<Window x:Class="WpfApp2.GUI.LoginPage"
+﻿<Window x:Class="WpfApp2.GUI.SignInPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2.GUI"
         mc:Ignorable="d"
-        Title="LoginPage" Height="500" Width="400" FontSize="14" Background="Maroon">
+        Title="SignInPage" Height="700" Width="650">
     <Border Background="#4d4d33" CornerRadius="20" Margin="20">
         <StackPanel Margin="20">
-            <Label Content="Login" Foreground="Maroon" FontSize="65" HorizontalAlignment="Center" FontFamily="AR BERKLEY"></Label>
+            <Label Content="Sign In To Play" Foreground="Maroon" FontSize="65" HorizontalAlignment="Center" FontFamily="AR BERKLEY"></Label>
             <Separator Background="Maroon"></Separator>
             <Label Content="Username" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"/>
             <TextBox Name="txtUsername" Background="#adad85" Foreground="White" FontSize="18"/>
             <Label Content="Password" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"/>
             <PasswordBox Name="txtPassword" Background="#adad85" Foreground="White" FontSize="18"/>
-            <Button Name="btnSubmit" Click ="btnSubmitClick" Content="Submit" Margin="60 10" Background="#adad85" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"></Button>
+            <Label Content="Retype Password" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"/>
+            <PasswordBox Name="txtPassword2" Background="#adad85" Foreground="White" FontSize="18"/>
             <Button Name="btnSignIn" Click ="btnSignInClick" Content="Sign In" Margin="60 10" Background="#adad85" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"></Button>
         </StackPanel>
     </Border>
