--- a/WpfApp2/GUI/AllGames.xaml
+++ b/WpfApp2/GUI/AllGames.xaml
@@ -10,7 +10,7 @@
         <TextBlock FontSize="50" Foreground="Maroon" FontFamily="AR DARLING"
                    Margin="0,10,0,10" FontWeight="ExtraBold" HorizontalAlignment="Center">ALL GAMES</TextBlock>
         <DataGrid Name ="dataGrid" CanUserAddRows="False" HorizontalAlignment="Center" Margin="0,30,0,10"
-                  VerticalAlignment="Top" Width="669" ColumnWidth="*" Background="Black"/>
+                  VerticalAlignment="Top" Width="669" ColumnWidth="*" Background="Black" HeadersVisibility="Column"/>
         <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
                 Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
             <Button.RenderTransform>
