--- a/WpfApp2/GUI/UserInputWindow.xaml
+++ b/WpfApp2/GUI/UserInputWindow.xaml
@@ -22,7 +22,17 @@
                 </ListBox.ItemTemplate>
             </ListBox>
             <Button Name="btnSubmit2" FontFamily="Century Gothic" Click ="btnSubmitClick2" Content="Generate" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
+            <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
+                    Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="4.374"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+            </Button>
         </StackPanel>
-        <TextBox Name="ZoneText" Width="160" Height="20" Margin="-80,340,0,0" Background="Bisque" />
     </Grid>
 </Window>
