--- a/WpfApp2/GUI/UserInputWindow.xaml
+++ b/WpfApp2/GUI/UserInputWindow.xaml
@@ -15,9 +15,11 @@
             <TextBlock FontSize="40" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">Choose category</TextBlock>
             <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Enter a keyword and we will build a word search for you!</TextBlock>
             <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">An artist you love, or your favorite song. We got you!</TextBlock>
-            <TextBox Name="txtUserInput"  Margin="50,0,450,10" Background="#545d6a" Foreground="White" FontSize="18"/>
-            <Button Name="btnSubmit" FontFamily="Century Gothic" Click ="btnSubmitClick" Content="Category" Margin="50,0,450,10" Width="100" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"></Button>
-            <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Left">choose categories :</TextBlock>
+            
+            <TextBox Name="txtUserInput" Width="300" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"/>
+            <!--<TextBox Name="txtUserInput"  />!-->
+            <Button Name="btnSubmit" Width="100" HorizontalAlignment="Left" Height="40" Background="Black" Foreground="Maroon" FontSize="18" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Content="submit" Click="btnSubmitClick"></Button>
+            <TextBlock Foreground="Black" FontSize="18" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Left">choose categories :</TextBlock>
             <ListBox Name="listBoxZone" ItemsSource="{Binding TheList}"
                      Height="115" Background="Azure">
                 <ListBox.ItemTemplate>
