--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -32,6 +32,9 @@
             </DataGrid>
             <Button Content="BACK TO MENU" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Bottom"
             Width="220" Height="40" Click="OnBackToMenu" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" FontFamily="AR CENA" RenderTransformOrigin="0.5,0.5"/>
+            <TextBlock Name="bonus" Visibility="Hidden" Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Bonus question! Waht was the category that we choose for you?</TextBlock>
+            <TextBox Name="bonus_answer" HorizontalAlignment="Center" Visibility="Hidden"></TextBox>
+            <Button Name="bonus_button" Visibility="Hidden" Content="GET ME THAT BONUS" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="250" Height="40" Click="bonusQuestion" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" FontFamily="AR CENA" RenderTransformOrigin="0.5,0.5"/>
         </StackPanel>
         <StackPanel Grid.RowSpan="2" Grid.ColumnSpan="2">
             <Button Name="ShowWords" Visibility="Hidden" Content="SHOW WORDS" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" Margin="10,10,0,0" FontFamily="AR CENA" HorizontalAlignment="Left" VerticalAlignment="Center" Width="160" Height="50" RenderTransformOrigin="0.494,0.34" Click="ShowWordsClick"/>
