--- a/WpfApp2/GUI/SignUpPage.xaml
+++ b/WpfApp2/GUI/SignUpPage.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="WpfApp2.GUI.SignInPage"
+﻿<Window x:Class="WpfApp2.GUI.SignUpPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2.GUI"
         mc:Ignorable="d"
-        Title="SignInPage" Height="700" Width="650">
+        Title="SignUnPage" Height="700" Width="650">
     <Border Background="#4d4d33" CornerRadius="20" Margin="20">
         <StackPanel Margin="20">
-            <Label Content="Sign In To Play" Foreground="Maroon" FontSize="65" HorizontalAlignment="Center" FontFamily="AR BERKLEY"></Label>
+            <Label Content="Sign Up To Play" Foreground="Maroon" FontSize="65" HorizontalAlignment="Center" FontFamily="AR BERKLEY"></Label>
             <Separator Background="Maroon"></Separator>
             <Label Content="Username" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"/>
             <TextBox Name="txtUsername" Background="#adad85" Foreground="White" FontSize="18"/>
@@ -16,7 +16,7 @@
             <PasswordBox Name="txtPassword" Background="#adad85" Foreground="White" FontSize="18"/>
             <Label Content="Retype Password" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"/>
             <PasswordBox Name="txtPassword2" Background="#adad85" Foreground="White" FontSize="18"/>
-            <Button Name="btnSignIn" Click ="btnSignInClick" Content="Sign In" Margin="60 10" Background="#adad85" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"></Button>
+            <Button Name="btnSignUp" Click ="btnSignUpClick" Content="Sign Up" Margin="60 10" Background="#adad85" FontFamily="AR BERKLEY" FontSize="29" Foreground="Maroon"></Button>
         </StackPanel>
     </Border>
 </Window>
