--- a/WpfApp2/GUI/UserInputWindow.xaml
+++ b/WpfApp2/GUI/UserInputWindow.xaml
@@ -6,54 +6,54 @@
         xmlns:local="clr-namespace:WpfApp2.GUI"
         mc:Ignorable="d"
         Title="UserInputWindow" Height="450" Width="800">
-    <Grid Background="Maroon">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.ColumnSpan="1">
-            <TextBlock FontSize="40" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">Choose category</TextBlock>
-            <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Enter a keyword and we will build a word search for you!</TextBlock>
-            <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">An artist you love, or your favorite song. We got you!</TextBlock>
-
-            <TextBox Name="txtUserInput" Width="300" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"/>
-            <!--<TextBox Name="txtUserInput"  />!-->
-            <Button Name="btnSubmit" Width="100" HorizontalAlignment="Left" Height="40" Background="Black" Foreground="Maroon" FontSize="18" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Content="Submit" Click="btnSubmitClick"></Button>
-            <TextBlock Foreground="Black" FontSize="18" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Left">choose categories :</TextBlock>
-            <ListBox Name="listBoxZone" ItemsSource="{Binding TheList}"
+    <ScrollViewer >
+        <Grid Background="Maroon">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.ColumnSpan="1">
+                <TextBlock FontSize="40" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">Choose category</TextBlock>
+                <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">Enter a keyword and we will build a word search for you!</TextBlock>
+                <TextBlock Foreground="Black" FontSize="15" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Center">An artist you love, or your favorite song. We got you!</TextBlock>
+                <TextBox Name="txtUserInput" Width="300" HorizontalAlignment="Left" Background="#545d6a" Foreground="White" FontSize="18"/>
+                <Button Name="btnSubmit" Width="100" HorizontalAlignment="Left" Height="40" Background="Black" Foreground="Maroon" FontSize="18" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Content="Submit" Click="btnSubmitClick"></Button>
+                <TextBlock Foreground="Black" FontSize="18" Margin="0,0,0,0" FontFamily="AR CENA" HorizontalAlignment="Left">choose categories :</TextBlock>
+                <ListBox Name="listBoxZone" ItemsSource="{Binding TheList}"
                      Height="115" Background="Azure">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <CheckBox Name="CheckBoxZone" Content="{Binding TheText}" Tag="{Binding TheValue}" Checked="CheckBoxZone_Checked" Unchecked="CheckBoxZone_Unchecked" Margin="0,5,0,0"></CheckBox>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Button Name="btnGenerate" Width="100" HorizontalAlignment="Left" Height="40" Background="Black" Foreground="Maroon" FontSize="18" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Content="Generate" Click ="btnGenerateClick"></Button>
-            <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <CheckBox Name="CheckBoxZone" Content="{Binding TheText}" Tag="{Binding TheValue}" Checked="CheckBoxZone_Checked" Unchecked="CheckBoxZone_Unchecked" Margin="0,5,0,0"></CheckBox>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Button Name="btnGenerate" Width="100" HorizontalAlignment="Left" Height="40" Background="Black" Foreground="Maroon" FontSize="18" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Content="Generate" Click ="btnGenerateClick"></Button>
+                <Button Margin="0,30,0,10" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="AR CHRISTY" 
                     Foreground="Maroon" Background="Black" Height="36" Width="100" Content="BACK" RenderTransformOrigin="0.5,0.5" Click="Button_Click">
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform Angle="4.374"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
-            </Button>
-        </StackPanel>
-        <StackPanel Grid.Column="2">
-            <TextBlock FontSize="40" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">CHOOSE FOR ME</TextBlock>
-            <Button Content="SUPRISE ME" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Center"
-                Width="200" Height="50" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Click="supriseMe_click">
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform Angle="8.5"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
-            </Button>
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="4.374"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
             </StackPanel>
-    </Grid>
+            <StackPanel Grid.Column="2">
+                <TextBlock FontSize="40" HorizontalAlignment="Center" Margin="0,0,0,0" Foreground="Black" FontWeight="ExtraBlack" FontFamily="AR DELANEY">CHOOSE FOR ME</TextBlock>
+                <Button Content="SUPRISE ME" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Center"
+                Width="200" Height="50" Background="Black" Foreground="Maroon" FontSize="26" FontWeight="ExtraBlack" FontFamily="AR DELANEY" RenderTransformOrigin="0.5,0.5" Click="supriseMe_click">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="8.5"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </Window>
